[gd_scene load_steps=15 format=3 uid="uid://deyq5763q8qd4"]

[ext_resource type="Script" path="res://scripts/traps/fire.gd" id="1_jl5i2"]
[ext_resource type="Texture2D" uid="uid://n6j3aaq0fkhl" path="res://sprites/Traps/Fire/Hit (16x32).png" id="1_k0sun"]
[ext_resource type="Texture2D" uid="uid://cay7t8orm7cy4" path="res://sprites/Traps/Fire/Off.png" id="2_7cqeh"]
[ext_resource type="Texture2D" uid="uid://bwcpyaaewlmwt" path="res://sprites/Traps/Fire/On (16x32).png" id="3_dw6vm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xmkdq"]
atlas = ExtResource("1_k0sun")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd6a4"]
atlas = ExtResource("1_k0sun")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_amtb6"]
atlas = ExtResource("1_k0sun")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_knfar"]
atlas = ExtResource("1_k0sun")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjtbv"]
atlas = ExtResource("3_dw6vm")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru55g"]
atlas = ExtResource("3_dw6vm")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gnp7"]
atlas = ExtResource("3_dw6vm")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sih6t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmkdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd6a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amtb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knfar")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7cqeh")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjtbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru55g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gnp7")
}],
"loop": true,
"name": &"on",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oa86t"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_us7rv"]
size = Vector2(16, 16)

[node name="Fire" type="StaticBody2D" groups=["fire"]]
script = ExtResource("1_jl5i2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sih6t")
animation = &"off"
autoplay = "off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_oa86t")

[node name="OnTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_us7rv")

[connection signal="timeout" from="OnTimer" to="." method="_on_on_timer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
